--- a/Source/style.css
+++ b/Source/style.css
@@ -49,7 +49,28 @@ body {
     pointer-events: none;
 }
 
+.hiddenHmmSettings{
+    height: 0px;
+    overflow:hidden;
+}
 
+.visibleHmmSettings{
+    
+}
+
+.info-div, #hmmSettings {
+    min-height: 20px;
+    padding: 0px 15px 0px 15px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
 
 
 
