--- a/Source/style.css
+++ b/Source/style.css
@@ -51,19 +51,29 @@ body {
 
 .hiddenHmmSettings{
     height: 0px;
+    border: 0px;
+    overflow:hidden;
+}
+
+.hiddenHmmSettingsInfo{
+    height: 0px;
+    border: 0px;
     overflow:hidden;
 }
 
 .visibleHmmSettings{
-    
+    border: 1px solid #e3e3e3;
 }
 
-.info-div, #hmmSettings {
-    min-height: 20px;
+.visibleHmmSettingsInfo{
+    border: 1px solid #e3e3e3;
+}
+
+.info-div, #hmmSettings, #hmmSettingsInf {
+    min-height: 0px;
     padding: 0px 15px 0px 15px;
     margin-bottom: 20px;
     background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
