--- a/Source/style.css
+++ b/Source/style.css
@@ -67,6 +67,8 @@ body {
 
 .visibleHmmSettingsInfo{
     border: 1px solid #e3e3e3;
+    color: rgb(17, 134, 241);
+    padding: 0px 15px 0px 15px;
 }
 
 .info-div, #hmmSettings, #hmmSettingsInf, #hmmSettingsMain {
